<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Codemonium</string>

    <!-- Login Fragment -->
    <string name="login_title">Login</string>
    <string name="login_username_label">Username</string>
    <string name="login_username_error_text">Username must be between %1$d-%2$d characters long</string>
    <string name="login_password_label">Password</string>
    <string name="login_password_error_text">Password must have at least %1$d characters</string>
    <string name="login_remember_me_label">Remember me</string>
    <string name="login_forgot_password_button_text">Forgot password</string>
    <string name="login_login_button_text">Login</string>
    <string name="login_create_account_button_text">Create account</string>

    <!-- Home Fragment -->
    <string name="home_appbar_title">Hi, %1$s! 👋</string>
    <string name="home_appbar_title_default">Hi, User! 👋</string>
    <string name="home_appbar_subtitle">Let\'s start learning!</string>
    <string name="home_appbar_search_label">Search for anything</string>
    <string name="home_first_section_name">Most Popular 🔥</string>
    <string name="home_second_section_name">Your Categories ❤</string>
    <string name="home_view_all">View All</string>

    <!-- Course Item -->
    <string name="course_item_title_default">Course</string>
    <string name="course_item_rating_default">5</string>
    <string name="course_item_hours">%1$sh</string>
    <string name="course_item_hours_default">6h</string>

    <!-- Topic Item -->
    <string name="topic_item_title_default">Topic</string>
    <string name="topic_item_reading_minutes">%1$s min</string>
    <string name="topic_item_reading_minutes_default">15 min</string>
</resources>