<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_dark_blue"
    android:orientation="vertical"
    android:padding="@dimen/app_padding"
    tools:context=".fragment.LoginFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="54dp"
        android:letterSpacing="0.05"
        android:text="@string/login_title"
        android:textAllCaps="true"
        android:textColor="@color/app_white"
        android:textSize="48sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_username_text_input_layout"
            style="@style/Widget.EC03.LoginTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:hint="@string/login_username_label"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_username_text_input_edit_text"
                style="@style/LoginTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_text_input_layout"
            style="@style/Widget.EC03.LoginTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:hint="@string/login_password_label"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_outline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_text_input_edit_text"
                style="@style/LoginTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_remember_me_label"
                android:textColor="@color/app_white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.EC03.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_forgot_password_button_text"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_login_button"
            style="@style/ContainedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:letterSpacing="0.1"
            android:paddingVertical="14dp"
            android:text="@string/login_login_button_text" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.EC03.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_create_account_button_text" />
    </LinearLayout>
</LinearLayout>