<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/home_appbar_background"
    android:orientation="vertical"
    android:padding="@dimen/app_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/home_appbar_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.02"
                android:lines="1"
                android:text="@string/home_appbar_title_default"
                android:textColor="@color/app_white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/home_appbar_subtitle"
                android:textColor="@color/app_light" />
        </LinearLayout>

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/notification_button_background"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_notifications_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.EC03.LoginTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/home_appbar_search_label"
        app:startIconDrawable="@drawable/ic_baseline_search_24">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/LoginTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>